try fix overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,9 +186,9 @@ section {
   margin-right: 6px;
 }
 
-.header .logo span {
-  font-size: 25px;
-  font-weight: 700;
+.header .logo h1 {
+  font-size: 20px;
+  font-weight: bold;
   letter-spacing: 1px;
   color: #012970;
   font-family: "Nunito", sans-serif;
